@@ -1,5 +1,7 @@
 Version 2.2-5
 
+ o Changed the default method for determining number of levels for a continuous predictor; see help page for 'effect' and discussion of the 'xlevels' argument for details.  Argument 'default.levels', while still included for compatibility, is depricated. 
+                                                                                                
  o Added .merMod methods for development version of lme4.
 
  o Added support for lme4.0.
